--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include README.rst
 include LICENSE
 include requirements.txt
-recursive-include ckanext/nap_theme *.html *.json *.js *.less *.css *.mo
+recursive-include ckanext/nap_theme/webassets *.html *.json *.js *.less *.css *.mo
